Orchestration - added lots of skeleton functionality for the whole orchestration flow, can see implemented functionality based on components highlighted in green here: https://lucid.app/lucidchart/247e2893-0efe-4d8c-8acf-155c8d24dc9c/edit?view_items=MSwx-22y.Bs-&page=0_0&invitationId=inv_037c9c73-847e-40b4-824b-79568ccaf794
