# api-specs/src/main/resources/openapi/orchestration-api.yaml
@@ -38,37 +38,6 @@ paths:
           description: Validation exception
         default:
           description: Unexpected error
-    put:
-      tags:
-        - Incidents
-      summary: Update an incident
-      operationId: updateIncident
-      parameters:
-        - in: path
-          name: incidentId
-          schema:
-            type: integer
-            format: int64
-            required: true
-            description: Id of incident to update
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Incident'
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Incident'
-        '400':
-          description: Invalid input
-        '422':
-          description: Validation exception
-        default:
-          description: Unexpected error
     delete:
       tags:
         - Incidents
@@ -107,6 +76,29 @@ paths:
             schema:
               $ref: '#/components/schemas/Incident'
         required: true
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Incident'
+        '400':
+          description: Invalid input
+        '422':
+          description: Validation exception
+        default:
+          description: Unexpected error
+    put:
+      tags:
+        - Incidents
+      summary: Update an incident
+      operationId: updateIncident
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Incident'
       responses:
         '200':
           description: Successful operation
@@ -195,14 +187,14 @@ components:
         patientId:
           type: integer
           format: int64
+        status:
+          type: string
+          enum:
+            - AWAITING_PRACTITIONER_ACTION
+            - IN_PROGRESS
+            - RESOLVED
         practitionerAction:
           type: string
           enum:
             - NO_ACTION_TAKEN
             - HOSPITAL_TRANSFER_URGENT
-        status:
-          type: string
-          enum:
-            - IN_PROGRESS
-            - RESOLVED
-            - CANCELLED
