# doctor-orch/src/main/java/com/emergingtech/orchestration/entity/model/Incident.java
@@ -1,28 +1,0 @@
-package com.emergingtech.orchestration.entity.model;
-
-import jakarta.persistence.*;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@Data
-@NoArgsConstructor
-@AllArgsConstructor
-@Entity
-@Builder
-@Table(name = "incidents")
-public class Incident {
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    public Long incidentId;
-
-    public Long practitionerId;
-
-    public Long patientId;
-
-    @Column(nullable = true)
-    public String practitionerAction;
-
-}
